--- a/style.css
+++ b/style.css
@@ -1,86 +1,24 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
+body{
+    background: #222;
+    overflow: hidden;
 }
-
-html, body{
-    width: 100%;
-    height: 100%;
-    background: #26292b;
-}
-
-.container{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
-}
-
-.card{
-    width: 20rem;
-    height: 24rem;
-    position: relative;
-    cursor: pointer;
-    border-radius: 20px;
-}
-
-.top{
+i{
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 100%;
-    height: 12rem;
-    background: #5f7adb;
-    border-radius: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    transition: 1s;
-    z-index: 1;
+    width: 4px;
+    height: 4px;
+    background: #0f0;
+    pointer-events: none;
+    animation: animate 2s linear forwards;
 }
 
-.top i{
-    font-size: 3rem;
-    color: white;
-}
-
-.card:hover .top{
-    transform: translateY(-100%);
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
-}
-
-.bottom{
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 100%;
-    height: 12rem;
-    padding: 1rem;
-    text-align: justify;
-    background: white;
-    border-radius: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: start;
-    flex-direction: column;
-    transition: 1s;
-}
-
-.bottom h1{
-    font-size: 1.8rem;
-    margin-bottom: 0.5rem;
-    width: 100%;
-    text-align: start;
-}
-
-.card:hover .bottom{
-    transform: translateY(0);
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
+@keyframes animate
+{
+    0%{
+        opacity: 1;
+        transform: translate(0, 0);
+    }
+    100%{
+        opacity: 0;
+        transform: translate(var(--x), var(--y));
+    }
 }
